[project]
name = "deisa-ray"
version = "0.0.6"
description = "In Situ Analytics with Ray backend"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "dask[dataframe]==2025.5.0",
    "ray[default]==2.48.0",
    "numpy",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["deisa"]

[tool.hatch.build.targets.sdist]
packages = ["deisa"]

[dependency-groups]
dev = [
    "ruff>=0.9.7,<0.10",
    "poethepoet>=0.32.2,<0.33",
    "pytest>=8.3.5,<9",
    "pre-commit>=4.2.0,<5",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "pyright (>=1.1.397,<2.0.0)",
    "py-spy>=0.4.0",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "furo>=2025.9.25",
]

[tool.ruff]
line-length = 120
exclude = ["build", "dist", ".venv"]

[tool.poe.tasks]
test = "pytest ."
check = "ruff check"
typecheck = "pyright src/deisa head.py"
_format = "ruff format"
_sort-imports = "ruff check --select I --fix"

[tool.poe.tasks.format]
sequence = ["_format", "_sort-imports"]
help = "Format the source code, and sort the imports"

[tool.poe.tasks.serve-docs]
cmd = "mkdocs serve"
help = "Serve the documentation locally"
