[project]
name = "deisa-ray"
version = "0.1.2"
description = "In Situ Analytics with Ray backend"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "dask[dataframe]==2025.5.0",
    "ray[default]>=2.48.0",
    "numpy",
    "torch>=2.10.0",
    "h5py>=3.15.1",
    "zarr>=3.1.5",
    "xarray",
    "h5netcdf",
]

[project.optional-dependencies]
mpi = [
    "mpi4py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deisa"]

[dependency-groups]
dev = [
    "ruff>=0.9.7,<0.10",
    "poethepoet>=0.32.2,<0.33",
    "pytest>=8.3.5,<9",
    "pre-commit>=4.2.0,<5",
    "pyright>=1.1.397,<2.0.0",
    "py-spy>=0.4.0",
]

docs = [
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "furo>=2025.9.25",

    # TEMP PIN:
    # Sphinx ≥9.1 currently fails with roman-numerals 4.1.0
    # (ModuleNotFoundError: roman_numerals when loading latex builder).
    # Remove this pin once upstream issue is fixed.
    "roman-numerals==4.0.0",
]

[tool.ruff]
line-length = 120
exclude = ["build", "dist", ".venv"]

[tool.poe.tasks]
test = "pytest ."
check = "ruff check"
typecheck = "pyright src/deisa head.py"
_format = "ruff format"
_sort-imports = "ruff check --select I --fix"

[tool.poe.tasks.format]
sequence = ["_format", "_sort-imports"]
help = "Format the source code, and sort the imports"
